manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: togglemaster-analytics
  labels:
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/component: analytics
    app.kubernetes.io/part-of: togglemaster
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: analytics-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: analytics-service
        app.kubernetes.io/component: analytics
        app.kubernetes.io/part-of: togglemaster
    spec:
      containers:
        - name: analytics-service
          image: 789754462323.dkr.ecr.us-east-1.amazonaws.com/togglemaster/analytics-service:3c6f69d8cd605fd53c9528871c478e5c1f9f9e5d
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8005
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
