manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: togglemaster-analytics
  labels:
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/component: analytics
    app.kubernetes.io/part-of: togglemaster
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: analytics-service
  ports:
    - name: http
      port: 8005
      targetPort: 8005
      protocol: TCP
